# sharu-io-monorepo

./: .gitignore  CLAUDE.md  Cargo.toml  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.config.json  tsconfig.base.json  vitest.config.ts
.github/workflows/: deploy-web.yml  release-safu-node.yml  release-sharu.yml
apps/desktop/: README.md  package.json  pnpm-lock.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/peer/: README.md  package.json  tsconfig.json
apps/peer/src/: fs-block-store.test.ts  fs-block-store.ts  fs-doc-store.test.ts  fs-doc-store.ts  fs-util.ts  identity.ts  main.ts  peer.integration.test.ts  peer.ts  transport.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts  wrangler.toml
apps/web/public/: _redirects  install.ps1  install.sh  manifest.webmanifest  sw.js
apps/web/scripts/: prerender.mjs
apps/web/src/: app.module.css  app.test.tsx  app.tsx  auth.module.css  base64url.test.ts  base64url.ts  cli-docs.module.css  cli-docs.test.tsx  cli-docs.tsx  comparison.module.css  comparison.test.tsx  comparison.tsx  device-names.test.ts  device-names.ts  devices.test.tsx  devices.tsx  file-table.module.css  file-table.test.tsx  file-table.tsx  flow.module.css  flow.test.tsx  flow.tsx  format.test.ts  format.ts  identity.browser.test.ts  identity.integration.test.ts  identity.ts  identity.verifier.test.ts  ingest-controller.test.ts  ingest-controller.ts  ingest-progress.module.css  ingest-progress.test.tsx  ingest-progress.tsx  landing.module.css  landing.test.tsx  landing.tsx  lint-guard.test.ts  main.tsx  messages.test.ts  messages.ts  (+69 more)
apps/web/src/cli-docs/: cli-spec.generated.ts  cli-spec.integration.test.ts  spec.ts
apps/web/src/messages/: app.ts  cli-docs.ts  comparison.ts  flow.ts  landing.ts  link.ts  meta.ts  nav.ts  share.ts  whitepaper.ts
apps/web/src/ui/: add-files-button.module.css  add-files-button.tsx  button.module.css  button.tsx  drop-zone.module.css  drop-zone.tsx  flow-story.module.css  flow-story.test.tsx  flow-story.tsx  icon-button.module.css  icon-button.test.tsx  icon-button.tsx  icon.tsx  segmented-control.module.css  segmented-control.test.tsx  segmented-control.tsx
crates/safu-crypto/: Cargo.toml
crates/safu-crypto/src/: chunker.rs  crypto.rs  lib.rs
crates/safu-node/: Cargo.toml  README.md  RELEASING.md  install.ps1  install.sh
crates/safu-node/deploy/: safu-node.service
crates/safu-node/keys/: safu-node.pub
crates/safu-node/src/: config.rs  doc.rs  main.rs  meta.rs  release.rs  store.rs  sync.rs  tui.rs  update.rs
crates/safu-transport/: Cargo.toml
crates/safu-transport/src/: lib.rs  native.rs  wasm.rs
crates/sharu/: Cargo.toml  README.md  RELEASING.md
crates/sharu/deploy/: sharu.service
crates/sharu/keys/: sharu.pub
crates/sharu/src/: brand.rs  identity.rs  main.rs  meta.rs  pairing.rs  release.rs  sas.rs  store.rs  sync.rs  tui.rs  update.rs
docs/: architecture-comparison-ipfs-vs-iroh.md  deployment.md  handoff.md  implementation-plan.md  landing-app-evaluation.md  public-share.md  sharu_modernization_blueprint.md  status.md  two-device-verification.md  vision.md
