[package]
name = "safu-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# `wasm-opt` (binaryen) is fetched from GitHub releases by wasm-pack; that
# download is blocked in sandboxed build environments. The unoptimized module is
# valid and functionally identical. Re-enable where binaryen is available.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
# Iroh's default features include `tls-ring`, which makes the `presets::N0`
# relay configuration available. On wasm32 Iroh compiles relay-only over
# WebSocket (browsers cannot do direct UDP/QUIC — handoff §4); the same crate
# builds natively for the desktop core (plan §3.2), where it gains direct
# hole-punching.
iroh = "1"

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
